--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <title>ToDo</title>
-      <link rel="stylesheet" href="style_todo.css">
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="to_do" class="container">
@@ -20,6 +20,6 @@
 
     </div>
 
-    <script type="text/javascript" src = "js_todo1.js"></script>
+    <script type="text/javascript" src = "script.js"></script>
   </body>
 </html>
